--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,5 +29,7 @@
     <string name="welcome_description">Learn Balinese Character</string>
     <string name="tab_scan">Aksara Gambar</string>
     <string name="tab_history">History</string>
+    <string name="camera">Camera</string>
+    <string name="gallery">Gallery</string>
 
 </resources>
