--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,6 +51,7 @@
     <string name="permission_request_denied">permission request denied</string>
     <string name="aksara">Aksara</string>
     <string name="back">Back</string>
+    <string name="draw">Draw</string>
 
     <string-array name="aksara_name">
         <item>Aksara Wianjana</item>
