--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -109,5 +109,7 @@
     <string name="notifications_permission_rejected">Notifications permission rejected</string>
     <string name="repeating_alarm_set_up">Daily notification set up</string>
     <string name="notification_is_cancelled">Daily notification is cancelled</string>
+    <string name="change_profile_picture">Change profile picture</string>
+    <string name="delete">Delete</string>
 
 </resources>
