add email verification

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -114,5 +114,7 @@
     <string name="default_web_client_id">" "</string>
     <string name="draw">Draw</string>
     <string name="or_login_with">Continue with Google</string>
+    <string name="msg_token_fmt">Your token is: %1$s</string>
+
 
 </resources>
