--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -111,5 +111,14 @@
     <string name="notification_is_cancelled">Notifikasi harian dibatalkan</string>
     <string name="change_profile_picture">Ubah foto profil</string>
     <string name="delete">Hapus</string>
+    <string name="please_fill_all_the_field">Please fill all the field</string>
+    <string name="please_use_the_correct_email">please use the correct email</string>
+    <string name="confirmation_password_is_not_match">Confirmation password is not match</string>
+    <string name="password_is_less_than_8_character">Password is less than 8 character</string>
+    <string name="email_cannot_be_empty">Email cannot be empty</string>
+    <string name="password_cannot_be_empty">Password cannot be empty</string>
+    <string name="authentication_failed">Authentication failed.</string>
+    <string name="login_failed">Login Failed!</string>
+    <string name="authentication_failed_or_account_didn_t_exist">Authentication failed or account didn\'t exist</string>
 
 </resources>
