--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -133,5 +133,8 @@
     <string name="a_6_digit_code_was_sent_to">A 6-digit code was sent to %1$s</string>
     <string name="resend_success">Resend success!</string>
     <string name="the_code_has_been_resent_to">the code has been resent to %1$s</string>
+    <string name="done">Done</string>
+    <string name="reset">Reset</string>
+    <string name="save">Save</string>
 
 </resources>
