--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -135,5 +135,12 @@
     <string name="done">Done</string>
     <string name="reset">Reset</string>
     <string name="save">Save</string>
+    <string name="dark_mode">Dark Mode</string>
+    <string name="theme">Theme</string>
 
+    <string name="dark_mode_auto">Automatic</string>
+    <string name="dark_mode_on">Dark mode</string>
+    <string name="dark_mode_off">Light mode</string>
+    <string name="choose_theme">Choose Theme</string>
+    <string name="display">Display</string>
 </resources>
