--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -136,5 +136,18 @@
     <string name="done">Done</string>
     <string name="reset">Reset</string>
     <string name="save">Save</string>
+    <string name="dark_mode">Dark Mode</string>
+    <string name="theme">Theme</string>
+
+    <string name="pref_key_dark" translatable="false">key_dark_mode</string>
+    <string name="pref_dark_auto" translatable="false">auto</string>
+    <string name="pref_dark_on" translatable="false">on</string>
+    <string name="pref_dark_off" translatable="false">off</string>
+
+    <string name="dark_mode_auto">Automatic</string>
+    <string name="dark_mode_on">Dark mode</string>
+    <string name="dark_mode_off">Light mode</string>
+    <string name="choose_theme">Choose Theme</string>
+    <string name="display">Display</string>
 
 </resources>
