--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -123,6 +123,7 @@
     <string name="login_failed">Login Failed!</string>
     <string name="authentication_failed_or_account_didn_t_exist">Authentication failed or account didn\'t exist</string>
     <string name="msg_token_fmt">Your token is: %1$s</string>
+    <string name="Hello">Hello!</string>
     <string name="verify_your_email">Verify your email!</string>
     <string name="click_to_verify_the_email">Click to verify the email</string>
     <string name="verify_success">Verify success!</string>
