--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -126,6 +126,21 @@
     <string name="msg_token_fmt">Your token is: %1$s</string>
     <string name="Hello">Hello!</string>
 
+    <string name="verify_your_email">Verify your email!</string>
+    <string name="click_to_verify_the_email">Click to verify the email</string>
+    <string name="verify_success">Verify success!</string>
+    <string name="click_to_continue">click to continue</string>
+    <string name="verify_failed">Verify failed!</string>
+    <string name="click_to_retry">click to retry</string>
+    <string name="a_6_digit_code_was_sent_to">A 6-digit code was sent to %1$s</string>
+    <string name="resend_success">Resend success!</string>
+    <string name="the_code_has_been_resent_to">the code has been resent to %1$s</string>
+    <string name="done">Done</string>
+    <string name="reset">Reset</string>
+    <string name="save">Save</string>
+    <string name="dark_mode">Dark Mode</string>
+    <string name="theme">Theme</string>
+
     <string name="pref_key_dark" translatable="false">key_dark_mode</string>
     <string name="pref_dark_auto" translatable="false">auto</string>
     <string name="pref_dark_on" translatable="false">on</string>
