--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
     <string name="confirmation_message">A 4-digit code was sent to lucasscott3@email.com</string>
     <string name="continue_text">Continue</string>
     <string name="resend_code">Resend code</string>
-    <string name="welcome_description">Welcome to Basali, A Platform to Learn Balinese Script.</string>
+    <string name="welcome_description">Welcome to Basali, A Platform to Learn Balinese Script, swipe left to continue</string>
     <string name="profile_image">Profile image</string>
     <string name="welcome">Welcome,</string>
     <string name="siti_badilah">Siti Badilah</string>
