--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -151,5 +151,7 @@
     <string name="dark_mode_off">Light mode</string>
     <string name="choose_theme">Choose Theme</string>
     <string name="display">Display</string>
+    <string name="switch_camera">Switch camera</string>
+    <string name="take_picture">Take picture</string>
 
 </resources>
