--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,7 +83,7 @@
     <string name="alarm_message">Notification message</string>
 
     <string name="pangangge_swara">Panganggĕ Swara</string>
-    <string name="desc_pangangge_swara">Swara script (ᬳᬓ᭄ᬱᬭᬲ᭄ᬯᬭ}}) is a script used for syllables that do not have a consonant at the beginning, or in other words syllables that only consist of vowels. The Balinese script has 14 vowel characters inherited from the Sanskrit writing tradition.</string>
+    <string name="desc_pangangge_swara">Swara script (ᬳᬓ᭄ᬱᬭᬲ᭄ᬯᬭ) is a script used for syllables that do not have a consonant at the beginning, or in other words syllables that only consist of vowels. The Balinese script has 14 vowel characters inherited from the Sanskrit writing tradition.</string>
 
     <string name="aksara_wyanjana">Aksara Wyañjana</string>
     <string name="desc_aksara_wyanjana">Wyañjana script (ᬳᬓ᭄ᬱᬭᬯ᭄ᬬᬜ᭄ᬚᬦ) is a consonant script with the inherent vowel /a/. As a script derived from Brahmi, the Balinese script has 33 wyañjana scripts to write the 33 consonant sounds used in Sanskrit and Kawi.</string>
