--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -153,5 +153,9 @@
     <string name="display">Display</string>
     <string name="switch_camera">Switch camera</string>
     <string name="take_picture">Take picture</string>
+    <string name="error_posting_image">Error posting image: %1$s</string>
+    <string name="invalid_scan_result">Invalid scan result</string>
+    <string name="error">Error</string>
+    <string name="failed_to_process_the_image">Failed to process the image</string>
 
 </resources>
