--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -150,4 +150,6 @@
     <string name="invalid_scan_result">Invalid scan result</string>
     <string name="error">Error</string>
     <string name="failed_to_process_the_image">Failed to process the image</string>
+    <string name="your_work_image">Your work image</string>
+    <string name="good_job_we_have_detected_that_it_is">Good job! We have detected that it is</string>
 </resources>
