--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -170,5 +170,7 @@
     <string name="enjoy_your_journey">Enjoy Your Journey</string>
     <string name="our_platform_provides_balinese_script_character_learning_items">our platform provides balinese script character learning items</string>
     <string name="or_continue_with_google">Or continue with Google</string>
+    <string name="profile">Profile</string>
+    <string name="profile_setting">Profile Setting</string>
 
 </resources>
