edit indonesian string

--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -5,8 +5,6 @@
     <string name="title_learn_aksara">Belajar Aksara</string>
     <string name="title_settings">Pengaturan</string>
     <string name="hello_blank_fragment">Halo fragment</string>
-    <string name="login_image">Awan</string>
-    <string name="login_image_2">Landak</string>
     <string name="login_welcome">Selamat Datang!</string>
     <string name="email_error">Masukkan Email yang benar!</string>
     <string name="password_error">Password harus terdiri dari minimal 8 karakter.</string>
@@ -39,6 +37,7 @@
     <string name="camera">Kamera</string>
     <string name="gallery">Galeri</string>
     <string name="cancel">Batal</string>
+    <string name="draw_dialog_desc">Ingin menguji kemampuan menulis aksara Bali Anda? gambarlah tulisan tanganmu di bawah ini.</string>
     <string name="successfully_written_balinese_script">Berhasil menulis skrip Bali?</string>
     <string name="scan_description">Ambil gambar tulisan tangan aksara Bali Anda, unggah, dan biarkan aplikasi mendeteksi jenis aksara Bali yang telah Anda tulis dengan sukses</string>
     <string name="capture">Ambil Gambar</string>
@@ -111,57 +110,58 @@
     <string name="notification_is_cancelled">Notifikasi harian dibatalkan</string>
     <string name="change_profile_picture">Ubah foto profil</string>
     <string name="delete">Hapus</string>
-    <string name="draw">Draw</string>
-    <string name="or_login_with">Continue with Google</string>
-    <string name="please_fill_all_the_field">Please fill all the field</string>
-    <string name="please_use_the_correct_email">please use the correct email</string>
-    <string name="confirmation_password_is_not_match">Confirmation password is not match</string>
-    <string name="password_is_less_than_8_character">Password is less than 8 character</string>
-    <string name="email_cannot_be_empty">Email cannot be empty</string>
-    <string name="password_cannot_be_empty">Password cannot be empty</string>
-    <string name="authentication_failed">Authentication failed.</string>
-    <string name="login_failed">Login Failed!</string>
-    <string name="authentication_failed_or_account_didn_t_exist">Authentication failed or account didn\'t exist</string>
-    <string name="msg_token_fmt">Your token is: %1$s</string>
-    <string name="Hello">Hello!</string>
-    <string name="verify_your_email">Verify your email!</string>
-    <string name="click_to_verify_the_email">Click to verify the email</string>
-    <string name="verify_success">Verify success!</string>
-    <string name="click_to_continue">click to continue</string>
-    <string name="verify_failed">Verify failed!</string>
-    <string name="click_to_retry">click to retry</string>
-    <string name="a_6_digit_code_was_sent_to">A 6-digit code was sent to %1$s</string>
-    <string name="resend_success">Resend success!</string>
-    <string name="the_code_has_been_resent_to">the code has been resent to %1$s</string>
-    <string name="done">Done</string>
+    <string name="draw">Gambar</string>
+    <string name="or_login_with">Lanjutkan dengan Google</string>
+    <string name="please_fill_all_the_field">Silakan isi semua kolom</string>
+    <string name="please_use_the_correct_email">silakan gunakan email yang benar</string>
+    <string name="confirmation_password_is_not_match">Kata sandi konfirmasi tidak cocok</string>
+    <string name="password_is_less_than_8_character">Kata sandi kurang dari 8 karakter</string>
+    <string name="email_cannot_be_empty">Email tidak boleh kosong</string>
+    <string name="password_cannot_be_empty">Password tidak boleh kosong</string>
+    <string name="authentication_failed">Otentikasi gagal.</string>
+    <string name="login_failed">Login Gagal!</string>
+    <string name="authentication_failed_or_account_didn_t_exist">Otentikasi gagal atau akun tidak ada</string>
+    <string name="msg_token_fmt">Token anda adalah: %1$s</string>
+    <string name="Hello">Halo!</string>
+    <string name="verify_your_email">Verifikasi email Anda!</string>
+    <string name="click_to_verify_the_email">Klik untuk memverifikasi email</string>
+    <string name="verify_success">Verifikasi berhasil!</string>
+    <string name="click_to_continue">klik untuk melanjutkan</string>
+    <string name="verify_failed">Verifikasi gagal!</string>
+    <string name="click_to_retry">klik untuk mencoba lagi</string>
+    <string name="a_6_digit_code_was_sent_to">Kode 6 digit telah dikirim ke %1$s</string>
+    <string name="resend_success">Pengiriman ulang berhasil!</string>
+    <string name="the_code_has_been_resent_to">Kode telah dikirim ulang ke %1$s</string>
+    <string name="done">Selesai</string>
     <string name="reset">Reset</string>
-    <string name="save">Save</string>
-    <string name="dark_mode">Dark Mode</string>
-    <string name="theme">Theme</string>
+    <string name="save">Simpan</string>
+    <string name="dark_mode">Mode Gelap</string>
+    <string name="theme">Tema</string>
 
-    <string name="dark_mode_auto">Automatic</string>
-    <string name="dark_mode_on">Dark mode</string>
-    <string name="dark_mode_off">Light mode</string>
-    <string name="choose_theme">Choose Theme</string>
-    <string name="display">Display</string>
-    <string name="switch_camera">Switch camera</string>
-    <string name="take_picture">Take picture</string>
-    <string name="error_posting_image">Error posting image: %1$s</string>
-    <string name="invalid_scan_result">Invalid scan result</string>
+    <string name="dark_mode_auto">Otomatis</string>
+    <string name="dark_mode_on">Mode Gelap</string>
+    <string name="dark_mode_off">Mode Terang</string>
+    <string name="choose_theme">Pilih Tema</string>
+    <string name="display">Tampilan</string>
+    <string name="switch_camera">Ganti Kamera</string>
+    <string name="take_picture">Ambil Gambar</string>
+    <string name="error_posting_image">Error saat mengunggah gambar: %1$s</string>
+    <string name="invalid_scan_result">Hasil pemindaian tidak valid</string>
     <string name="error">Error</string>
-    <string name="failed_to_process_the_image">Failed to process the image</string>
-    <string name="your_work_image">Your work image</string>
-    <string name="good_job_we_have_detected_that_it_is">Good job! We have detected that it is</string>
-    <string name="retry">Retry</string>
-    <string name="failed_to_get_history_data_failed_to_get_data_please_log_back_into_the_application_if_this_continues_to_happen">Failed to get history data, Failed to get data, please log back into the application if this continues to happen</string>
-    <string name="failed_to_load_data">Failed to load data</string>
-    <string name="scan_your_aksara">Scan Your Aksara</string>
-    <string name="scan_your_handwriting_balinese_script_character_using_your_camera">Scan your handwriting balinese script character using your camera</string>
-    <string name="enjoy_your_journey">Enjoy Your Journey</string>
-    <string name="our_platform_provides_balinese_script_character_learning_items">our platform provides balinese script character learning items</string>
-    <string name="or_continue_with_google">Or continue with Google</string>
-    <string name="search">search</string>
-    <string name="find_your_history">Find your history</string>
-    <string name="profile">Profile</string>
-    <string name="profile_setting">Profile Setting</string>
+    <string name="failed_to_process_the_image">Gagal memproses gambar</string>
+    <string name="your_work_image">Gambar karyamu</string>
+    <string name="good_job_we_have_detected_that_it_is">Bagus! Kami telah mendeteksi bahwa itu adalah</string>
+    <string name="retry">Coba lagi</string>
+    <string name="failed_to_get_history_data_failed_to_get_data_please_log_back_into_the_application_if_this_continues_to_happen">Gagal mendapatkan data riwayat, Gagal mendapatkan data, harap masuk kembali ke aplikasi jika hal ini terus terjadi</string>
+    <string name="failed_to_load_data">Gagal memuat data</string>
+    <string name="scan_your_aksara">Pindai Aksaramu</string>
+    <string name="scan_your_handwriting_balinese_script_character_using_your_camera">Pindai karakter aksara Bali tulisan tanganmu menggunakan kamera</string>
+    <string name="enjoy_your_journey">Nikmati Perjalananmu</string>
+    <string name="our_platform_provides_balinese_script_character_learning_items">Platform kami menyediakan materi pembelajaran karakter aksara Bali</string>
+    <string name="or_continue_with_google">Atau lanjutkan dengan Google</string>
+    <string name="search">Cari</string>
+    <string name="find_your_history">Temukan riwayatmu</string>
+    <string name="profile">Profil</string>
+    <string name="profile_setting">Pengaturan Profil</string>
+
 </resources>
