edit error caused string

--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -163,5 +163,6 @@
     <string name="find_your_history">Temukan riwayatmu</string>
     <string name="profile">Profil</string>
     <string name="profile_setting">Pengaturan Profil</string>
+    <string name="kipas_bali">Kipas Bali</string>
 
 </resources>
