--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -170,5 +170,6 @@
     <string name="or_continue_with_google">Or continue with Google</string>
     <string name="profile">Profile</string>
     <string name="profile_setting">Profile Setting</string>
+    <string name="kipas_bali">Kipas Bali</string>
 
 </resources>
