--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -171,5 +171,6 @@
     <string name="profile">Profile</string>
     <string name="profile_setting">Profile Setting</string>
     <string name="kipas_bali">Kipas Bali</string>
+    <string name="edit_your_profile_picture">Edit your profile picture</string>
 
 </resources>
