another fix bug

--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -165,5 +165,6 @@
     <string name="profile_setting">Pengaturan Profil</string>
     <string name="kipas_bali">Kipas Bali</string>
     <string name="edit_your_profile_picture">Ubah foto profile anda</string>
+    <string name="scanned">yang sudah di scan</string>
 
 </resources>
